# vertec_rust_app

./: .example.env  .gitignore  Cargo.toml
src/: main.rs
src/app_ecs/: mod.rs
src/axum_server/: mod.rs
src/device_interface/: mod.rs
src/device_state_management/: mod.rs
src/mqtt_integration/: mod.rs
src/surrealdb_integration/: mod.rs
