[package]
name = "vertec_rust_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rumqttc = "0.23.0"
bevy = {version = "0.12.1", default-features=false, features = ["dynamic_linking"] } #Remove dynamic linking for release

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3